--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,140 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background-color: #f7f7f7;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100vh;
+  margin: 0;
+  font-family: sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  margin: 30px auto;
+  width: 350px;
+}
+h1 {
+  letter-spacing: 1px;
+  margin: 0;
+}
+h3 {
+  border-bottom: 1px solid #bbb;
+  padding-bottom: 10px;
+  margin: 40px 0 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h4 {
+  margin: 0;
+  text-transform: uppercase;
+}
+.inc-exp-container {
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.24);
+}
+.inc-exp-container > div {
+  text-align: center;
+
+  flex: 1;
+}
+.inc-exp-container > div:first-of-type {
+  border-right: 1px solid #dedede;
+}
+.plus {
+  color: #2ecc71;
+}
+.minus {
+  color: #c0392b;
+}
+.money {
+  font-size: 20px;
+  margin: 5px 0;
+  letter-spacing: 1px;
+}
+
+.list {
+  margin-bottom: 40px;
+  list-style: none;
+  padding: 0px;
+}
+.list li {
+  position: relative;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  color: #333;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.24);
+  margin: 10px 0;
+  padding: 10px;
+}
+.minus-list {
+  border-right: 5px solid #c0392b;
+}
+.plus-list {
+  border-right: 5px solid #2ecc71;
+}
+
+.delete-btn {
+  background-color: #e74c3c;
+  border: none;
+  cursor: pointer;
+  color: #fff;
+  padding: 2px 4px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  font-size: 20px;
+  line-height: 20px;
+  transform: translate(-100%, -50%);
+  transition: opacity 0.3s ease;
+  opacity: 0;
+  border-radius: 5px;
+}
+
+.list li:hover .delete-btn {
+  opacity: 1;
+}
+
+.btn {
+  cursor: pointer;
+  background-color: #2ecc71;
+  box-shadow: var(--box-shadow);
+  color: #fff;
+  border: 0;
+  display: block;
+  font-size: 16px;
+  margin: 10px 0 30px;
+  padding: 10px;
+  width: 100%;
+}
+
+.btn:focus,
+.delete-btn:focus {
+  outline: 0;
+}
+label {
+  display: inline-block;
+  margin: 10px 0;
+  color: rgb(24, 17, 17);
+}
+
+input {
+  display: block;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  padding: 10px;
+  width: 100%;
+}
+input:focus {
+  background-color: #d5fce6;
+  outline: #2ecc71;
 }
